# svm-gmu

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/reports/report_3/: references.bib  report.tex
docs/reports/report_3/graphics/: comparison.pgf  convergence_metrics.pgf  dataset_gmm_uncertainty_contours.pgf  gmu_vs_gsu_approximation.pgf  svm-gmu_decision_boundary.pgf
examples/: banana_crescent.ipynb  close_separable.ipynb  demo_2d.ipynb
experiments/: gmu_vs_gsu_approximation.ipynb  results.csv  run_experiments.py  svm_gmu_convergence.ipynb
src/svm_gmmu/: _validation.py
src/svm_gmu/: __init__.py  _estimator.py  _loss.py  _plotting.py  _validation.py  classifier.py  data.py  loss.py  plotting.py  visualization.py
tests/: test_classifier.py  test_data.py  test_loss.py  test_visualization.py
