[project]
name = "svm-gmu"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Sushrut Gaikwad", email = "sushrut.ishwargaikwad@students.iiserpune.ac.in" }
]
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.10.8",
    "numpy>=2.4.3",
    "pandas>=3.0.1",
    "scikit-learn>=1.8.0",
    "scipy>=1.17.1",
]

[project.scripts]
svm-gmu = "svm_gmu:main"

[build-system]
requires = ["uv_build>=0.9.26,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
